Show exif, remove unneeded fields.
